force-app/main/default/objects/LLC_BI__RelatedListsCopyConfiguration__c/LLC_BI__RelatedListsCopyConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Related Lists to be copied with an Object copy</description>
    <label>Related Lists Copy Configuration</label>
</CustomObject>