force-app/main/default/objects/LLC_BI__RelatedListsCopyConfiguration__c/fields/LLC_BI__Label__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Label__c</fullName>
    <description>This field is manually entered and required when utilizing the related list copy configuration option. This field is the Label used when displaying the list.</description>
    <inlineHelpText>Label used when displaying the list</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>