force-app/main/default/objects/LLC_BI__RelatedListsCopyConfiguration__c/fields/LLC_BI__Related_List_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Related_List_Name__c</fullName>
    <description>This field is manually entered and required when utilizing the related list copy configuration option. This field specifies the name of a related list of data to copy.</description>
    <inlineHelpText>Name of a related list of data to copy</inlineHelpText>
    <label>Related List Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>