force-app/main/default/objects/LLC_BI__RelatedListsCopyConfiguration__c/fields/LLC_BI__SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__SObject_Type__c</fullName>
    <description>This field is manually entered and required when utilizing the related list copy configuration option. This field specifies the sObject Type to which the lists apply.</description>
    <inlineHelpText>SObject Type to which the lists apply</inlineHelpText>
    <label>SObject Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>